2002-09-03  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp (ProcessTypeHeader, ProcessTypeHeaders),
	(ComputeTypesClosure): Make member types visible early enough.
	(ProcessSingleTypeImportDeclaration): Create place-holder type for
	bad imports to silence further errors.
	(FindNestedType): Check for inaccessible nested types before
	reporting type not found.
	* src/semantic.h (AddDependence): Check for bad types.
	* src/expr.cpp (ProcessMethodName, GetAnonymousType),
	(ProcessClassInstanceCreationExpression):
	* src/body.cpp (ProcessTryStatement): Silence chain-reaction error
	messages when try block contains semantic error - bug 670.
	* src/error.h:
	* src/error.cpp (DUPLICATE_IMPORT_NAME),
	(ANONYMOUS_TYPE_CANNOT_OVERRIDE_DEFAULT_ABSTRACT_METHOD): New
	error messages.

2002-08-29  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ReportMethodNotFound, FindMethodInType),
	(ProcessMethodName, FindMethodMember):
	* src/decl.cpp (CompleteSymbolTable, CheckMethodOverride),
	(AddInheritedMethods): Allow for multiple inheritance of abstract
	methods, including when one of the set is not public - bug 3253.
	* src/error.h:
	* src/error.cpp (UNIMPLEMENTABLE_CLASS): New caution.

2002-08-29  Eric Blake  <ebb9@email.byu.edu>

	* src/error.h:
	* src/error.cpp (*_THROWS_CLAUSE_CLASS): New pedantic warnings.
	* src/semantic.h (CheckThrow):
	* src/body.cpp (CheckThrow): Improve to give pedantic warnings
	regarding throws clauses - bug 3232.
	(ProcessMethodBody, ProcessConstructorBody): Use new features.

2002-08-28  Elliott Hughes  <enh@acm.org>

	* src/set.h (primes): g++ 3.1 on Mac OS X 10.2 has trouble
	with static arrays in template classes; avoid these and remove
	duplication of hash-resizing code as a side-effect - patch 349.

2002-08-28  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (FindMethodMember): One more case of bug 3240.
	(ProcessClassInstanceCreationExpression):
	* src/body.cpp (UncaughtExceptionContext): Fix error messages.