@@ -331,6 +331,7 @@ public:
         INNER_CLASS_REFERENCE_TO_NON_FINAL_LOCAL_VARIABLE,
         INHERITANCE_AND_LEXICAL_SCOPING_CONFLICT_WITH_LOCAL,
         INHERITANCE_AND_LEXICAL_SCOPING_CONFLICT_WITH_MEMBER,
+        INHERITANCE_AND_LEXICAL_SCOPING_CONFLICT_WITH_TYPE,
         ILLEGAL_THIS_FIELD_ACCESS,
         CONSTRUCTOR_FOUND_IN_ANONYMOUS_CLASS,
         ENCLOSING_INSTANCE_ACCESS_FROM_CONSTRUCTOR_INVOCATION,
@@ -635,6 +636,7 @@ private:
     static wchar_t *PrintINNER_CLASS_REFERENCE_TO_NON_FINAL_LOCAL_VARIABLE(ErrorInfo &, LexStream *, Control &);
     static wchar_t *PrintINHERITANCE_AND_LEXICAL_SCOPING_CONFLICT_WITH_LOCAL(ErrorInfo &, LexStream *, Control &);
     static wchar_t *PrintINHERITANCE_AND_LEXICAL_SCOPING_CONFLICT_WITH_MEMBER(ErrorInfo &, LexStream *, Control &);
+    static wchar_t *PrintINHERITANCE_AND_LEXICAL_SCOPING_CONFLICT_WITH_TYPE(ErrorInfo &, LexStream *, Control &);
     static wchar_t *PrintILLEGAL_THIS_FIELD_ACCESS(ErrorInfo &, LexStream *, Control &);
     static wchar_t *PrintCONSTRUCTOR_FOUND_IN_ANONYMOUS_CLASS(ErrorInfo &, LexStream *, Control &);
     static wchar_t *PrintENCLOSING_INSTANCE_ACCESS_FROM_CONSTRUCTOR_INVOCATION(ErrorInfo &, LexStream *, Control &);
