@@ -970,7 +970,9 @@ MethodShadowSymbol *Semantic::FindMethodInEnvironment(SemanticEnvironment *&wher
 
         if (method_symbol -> containing_type != where_found -> Type())
         {
-            // is symbol an inherited field?
+            //
+            // The method was inherited.
+            //
             if (method_symbol -> IsSynthetic())
             {
                 ReportSemError(SemanticError::SYNTHETIC_METHOD_INVOCATION,
@@ -980,8 +982,12 @@ MethodShadowSymbol *Semantic::FindMethodInEnvironment(SemanticEnvironment *&wher
                                method_symbol -> containing_type -> ContainingPackage() -> PackageName(),
                                method_symbol -> containing_type -> ExternalName());
             }
-            else if (! where_found -> Type() -> ACC_STATIC())
+            else if (control.option.pedantic)
             {
+                //
+                // Give a pedantic warning if the inherited method shadowed
+                // a method of the same name within an enclosing lexical scope.
+                //
                 Tuple<MethodShadowSymbol *> others(2);
                 SemanticEnvironment *found_other,
                                     *previous_env = where_found -> previous;
@@ -989,12 +995,13 @@ MethodShadowSymbol *Semantic::FindMethodInEnvironment(SemanticEnvironment *&wher
                                         method_call);
 
                 if (others.Length() > 0 &&
-                    where_found -> Type() -> HasEnclosingInstance(found_other -> Type()))
+                    where_found -> Type() != found_other -> Type())
                 {
                     for (int i = 0; i < others.Length();  i++)
                     {
-                        if (! (others[i] -> method_symbol == method_symbol &&
-                               method_symbol -> ACC_STATIC()))
+                        if (others[i] -> method_symbol != method_symbol &&
+                            (others[i] -> method_symbol -> containing_type ==
+                             found_other -> Type()))
                         {
                             ReportSemError(SemanticError::INHERITANCE_AND_LEXICAL_SCOPING_CONFLICT_WITH_MEMBER,
                                            method_call -> LeftToken(),
@@ -1527,9 +1534,10 @@ VariableSymbol *Semantic::FindVariableInEnvironment(SemanticEnvironment *&where_
         }
         else if (variable_symbol -> owner != where_found -> Type())
         {
-            // is symbol an inherited field?
+            //
+            // The field was inherited.
+            //
             TypeSymbol *type = (TypeSymbol *) variable_symbol -> owner;
-
             if (variable_symbol -> IsSynthetic())
             {
                 ReportSemError(SemanticError::SYNTHETIC_VARIABLE_ACCESS,
@@ -1539,8 +1547,12 @@ VariableSymbol *Semantic::FindVariableInEnvironment(SemanticEnvironment *&where_
                                type -> ContainingPackage() -> PackageName(),
                                type -> ExternalName());
             }
-            else if (! where_found -> Type() -> ACC_STATIC())
+            else if (control.option.pedantic)
             {
+                //
+                // Give a pedantic warning if the inherited field shadowed
+                // a field of the same name within an enclosing lexical scope.
+                //
                 Tuple<VariableSymbol *> others(2);
                 SemanticEnvironment *found_other,
                                     *previous_env = where_found -> previous;
@@ -1548,12 +1560,11 @@ VariableSymbol *Semantic::FindVariableInEnvironment(SemanticEnvironment *&where_
                                           name_symbol, identifier_token);
 
                 if (others.Length() > 0 &&
-                    where_found -> Type() -> HasEnclosingInstance(found_other -> Type()))
+                    where_found -> Type() != found_other -> Type())
                 {
                     for (int i = 0; i < others.Length(); i++)
                     {
-                        if (others[i] != variable_symbol ||
-                            ! variable_symbol -> ACC_STATIC())
+                        if (others[i] != variable_symbol)
                         {
                             MethodSymbol *method =
                                 others[i] -> owner -> MethodCast();
@@ -1569,7 +1580,7 @@ VariableSymbol *Semantic::FindVariableInEnvironment(SemanticEnvironment *&where_
                                                method -> Name());
                                 break;
                             }
-                            else
+                            else if (others[i] -> owner == found_other -> Type())
                             {
                                 ReportSemError(SemanticError::INHERITANCE_AND_LEXICAL_SCOPING_CONFLICT_WITH_MEMBER,
                                                identifier_token,
